new citations and corrections

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -40,9 +40,9 @@ The Results chapter presents an overview of the electromagnetic behaviour of ten
 } 
 \item{Periodic gaps in the wires introduce the individual resonances with an electric dipole. Their spectra of  effective parameters are described in detail, since they are typical also for resonances in other structures. Parametric scans through wire radius and cut distance are shown to have nontrivial effects on the resonance frequency. Our experimental data from cut-wire array on silicon substrate are compared to numerical model, and the difference is explained as an effect of asymmetry and losses in the sample. 
 } 
-\item{The individual resonances with an electric dipole are compared to their counterparts with a magnetic dipole forming the fundamental resonance of split-ring resonators. The resonator with a single splitting in the ring is asymmetric, and it is demonstrated that  erroneous results for this structure are retrieved by by any homogenization method that does not account for the asymmetry. The version with a symmetric splitting, however, can be homogenized to obtain negative permeability. Further a combination of the double-split ring resonator with the wire array is shown to yield the negative index of refraction with compatible results between the s-parameters method a current-driven homogenization.
+\item{The individual resonances with an electric dipole are compared to their counterparts with a magnetic dipole forming the fundamental resonance of split-ring resonators. The resonator with a single splitting in the ring is asymmetric, and it is demonstrated that  erroneous results for this structure are retrieved by any homogenization method that does not account for the asymmetry. The version with a symmetric splitting, however, can be homogenized to obtain negative permeability. Further a combination of the double-split ring resonator with the wire array is shown to yield the negative index of refraction with compatible results between the s-parameters method a current-driven homogenization.
 } 
-\item{On the contrary, the next chapter illustrates a discrepancy between these two approaches to homogenization. When a central shunt conductor is added to a symmetric split-ring resonator, the electric type resonance becomes the fundamental one, and by continuous changes in the geometry one can  can be tuned the electric and magnetic resonance frequencies. While it might be intuitively expected they would form a region of negative refractive index, the simulations have shown that the spatial dispersion causes the dispersion curves to bend into a concave shape. Detailed plots illustrate that the structure supports multiple modes at the same frequency. Consequently, the scattering-parameter method can not determine the effective index of refraction.
+\item{On the contrary, the next chapter illustrates a discrepancy between these two approaches to homogenization. When a central shunt conductor is added to a symmetric split-ring resonator, the electric type resonance becomes the fundamental one, and by continuous changes in the geometry one  can be tuned the electric and magnetic resonance frequencies. While it might be intuitively expected they would form a region of negative refractive index, the simulations have shown that the spatial dispersion causes the dispersion curves to bend into a concave shape. Detailed plots illustrate that the structure supports multiple modes at the same frequency. Consequently, the scattering-parameter method can not determine the effective index of refraction.
 } 
 \item{Dielectric spherical resonators are shown to exhibit individual resonances of Mie type, the first of which is analogous to the resonance in split-ring resonator. With the exactly defined dielectric model of the constituent dielectric, we can deduce minimum dissipative losses that can be achieved in an experiment and show what impact they have on the resonance spectra. Further we accompany the computed spectra with our experimental results, arguing that the substantial deviation thereof arises from inhomogeneity of the resonators in the sample. Taking the size dispersion into account gives a reasonable match with experiment. Extended sieving of the spheres improved the resonance deeper, but no negative permeability was reached.
 %		\add{Owing to the homogeneous broadening of the resonator resonance, caused by intrinsic losses of TiO$_{2}$, further sieving appears to lack any purpose. Not only this project broadens the numerous group of technically successful research projects pointed in utterly wrong direction, it also classifies into the lamentable subgroup of effort that could be entirely avoided if open and honest scientific discussion took place about the inherent problems. In this case, particularly, in all related papers it should be openly stated that the dielectric losses of TiO2 prevent building any applicable volume metamaterial, no matter how accurately the resonators are prepared.}
@@ -95,12 +95,12 @@ Let us note that implications opposite to these shown may not hold, either.  For
 
 %\paragraph{What the thesis does not contain} 
 \paragraph{Closing words} 
-Many papers focused on metamaterials -- and maybe majority of them -- are dedicated to achieving negative index of refraction or a cloaking effect, with as high frequency and as low losses as possible.
+While metamaterials were successfully tested in the radio-frequency and microwave ranges, e.g., for compact antennas or magnetic resonance imaging \cite{freire2008experimental}, probably the majority of related papers are dedicated to achieving negative index of refraction or a cloaking effect, with as high frequency and as low losses as possible.
 On the way to this tantalizing aim and to fast publication, too often they use an overly simplistic theoretical description or inadequate characterisation approach, or both. %Typically, the scattering parameter method is applied for structures with strong coupling
 
-The rapid growth of the publications related to metamaterials of the last two decades is certainly beneficial for the overall growth of knowledge. However, one should not forget about the price to be paid for it. Some of the concepts developed decades ago seem to be re-invented and published as novel. Aside of it, a significant portion of papers deals with the same class of structures, presenting only a minute quantitative improvement over the previous results, and fail to bring any conceptual progress. This way, they dilute the information density of even high-impacted journals. This is exacerbated by the fact that, in the author's experience, even the metamaterial monographs are mostly assembled of separate papers that are unrelated to each other and by far not covering all relevant theory.
+The rapid growth of the  number of papers related to metamaterials of the last two decades is certainly beneficial for the overall growth of knowledge. However, one should not forget about the price to be paid for it. Some of the concepts developed decades ago seem to be re-invented and published as novel. Aside of it, a significant portion of papers deals with the same class of structures, presenting only a minute quantitative improvement over the previous results, and fail to bring any conceptual progress. This way, they dilute the information density of even high-impacted journals. This is exacerbated by the fact that, in the author's experience, even the metamaterial monographs are mostly assembled of separate papers that are unrelated to each other and by far not covering all relevant theory.
 
-On the contrary, the genuinely tough issues seem to be rather underexposed. In the infrared and optical range, these are most importantly the ubiquitous dissipative losses. They are common for high-permitivity dielectrics and metals, where the permittivity of any known low-loss material appears insufficient for metamaterial behaviour \cite{dominec2014transition}; contemporary superconductors lose their superconducting properties above terahertz frequencies. To the knowledge of author, all experimental demonstrations of metamaterials are restricted to unpractically small dimensions. 
+On the contrary, the genuinely tough issues seem to be rather underexposed. In the infrared and optical range, these are most importantly the ubiquitous dissipative losses. They are common for high-permitivity dielectrics and metals, where the permittivity of any known low-loss material appears insufficient for metamaterial behaviour \cite{dominec2014transition}; contemporary superconductors lose their superconducting properties above terahertz frequencies. To the knowledge of author, all experimental demonstrations of such metamaterials are restricted to tiny samples which remain relatively transparent. Active amplification in unit cells, using either lumped components \cite{jelinek2011fet} or stimulated emission, may partially compensate for the losses, but it appears very hard to achieve sufficient linearity and homogeneity. 
 % \cite{tassin2012comparison}
 % "First, reduction of losses by using crystalline metals and/or by introducing optically amplifying materials; developing three-dimensional isotropic designs rather than planar structures; and finding ways of mass producing large-area structures." -- Soukolis in http://eurekalert.org/pub_releases/2007-01/dl-mft010407.php?light
 %Compared to the publication boom and its optimistic aims, the metamaterials find their way to applications markedly slowly. The novel phenomena such as cloaking or sub-wavelength imaging are still confined to laboratory demonstrations, usually for structures not much bigger than the wavelength. The research of semiconductors in the first decades did not bring any notable applications, either, but even at that time it had to be clear that semiconductors present a wholly new field of basic material research. On the other hand, the recent progress in the field of metamaterials resembles the applied research: It is mostly a \textit{design} and \textit{optimisation} of already known structures towards some particular behaviour, rather than a search for new fundamental physics. 
