--- a/fdphd.bib
+++ b/fdphd.bib
@@ -40,8 +40,6 @@
   AUTHOR = {Dominec, F and Kadlec, C and N{\v{e}}mec, H and Kadlec, F and Yahiaoui, R and Chung, U-C and Elissalde, C and Maglione, M and Mounaix, P and Ku{\v{z}}el, P},
   BOOKTITLE = {SPIE Conference on Metamaterials, Prague (Czech Republic)},
   YEAR = {2013},
-  note = {},
-  volume = {8771},
   doi = {10.1117/12.2017006},
   %URL = {http://dx.doi.org/10.1117/12.2017006},
   note = {Poster},
@@ -2551,8 +2549,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 }
 
 /*}}}*/
-
-% -- Other homogenisation approaches --
+% -- Other homogenisation approaches --/*{{{*/
 @article{smith2006homogenization,
   title={Homogenization of metamaterials by field averaging},
   author={Smith, David R and Pendry, John B},
@@ -2605,24 +2602,16 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
   publisher={APS},
   abstract={An analytical description for plane-wave propagation in metamaterials is presented. It follows the usual approach for describing light propagation in homogeneous media on the basis of Maxwell’s equations, although applied to a medium composed of metallic nanostructures. Here, as an example, these nanostructures are double (or cut) wires. In the present approach it is assumed that the carriers perform collective oscillations in a single wire. These oscillations are coupled to those in the adjacent wire; thus, the internal carrier dynamics may be described by a coupled-oscillator model. The multipole expansion technique is used to account for the electric and magnetic dipole as well as the electric quadrupole moments of these carrier oscillations within the nanostructure. It turns out that the symmetric normal mode is related to the electric dipole moment whereas the antisymmetric normal mode evokes simultaneously a magnetic dipole and an electric quadrupole moment. It is shown how effective permittivity and permeability can be derived from analytical expressions for the dispersion relation, the magnetization, and the electric displacement field. The results of the analytical model are compared with rigorous simulations of Maxwell’s equations yielding the limitations and the domain of applicability of the proposed model.}
 }
+/*}}}*/
 
-
-% == Other ==
-@article{smolyaninov2011vacuum,
-  title={Vacuum as a hyperbolic metamaterial},
-  author={Smolyaninov, Igor I},
-  journal={arXiv preprint arXiv:1108.2203},
-  year={2011}
+% == History == /*{{{*/
+@online{moroz,
+  author = {Moroz, Alexander},
+  title = {Some negative refractive index material headlines long before Veselago work and going back as far as to 1905},
+  year = 2009,
+  url = {http://www.wave-scattering.com/negative.html},
+  urldate = {2015-07-30}
 }
-@article{hill2013uncertainty,
-  title={The uncertainty principle for Fourier transforms on the real line},
-  author={Hill, Mitch},
-  year={2013}
-}
-
-
-% == History ==
-% -- 
 @article{bragg1913reflection,
   title={The reflection of X-rays by crystals},
   author={Bragg, WH and Bragg, WL},
@@ -2709,9 +2698,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
   year={2002},
   publisher={Springer}
 }
-
-
-
+/*}}}*/
 % -- Artif diels -- /*{{{*/
 @article{kock1948metallic,
   title={Metallic delay lenses},
@@ -2835,6 +2822,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
   publisher={Nature Publishing Group}
 }
 /*}}}*/
+
 @book{solymar2009waves,
   title={Waves in metamaterials},
   author={Solymar, Laszlo and Shamonina, Ekaterina},
@@ -2842,20 +2830,11 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
   publisher={Oxford University Press}
 }
 
-
-
 @techreport{merkel1973simulation,
   title={Simulation of a simple Lorentz plasma with a random distribution of inductively loaded dipoles},
   author={Merkel, George},
   year={1973},
   institution={DTIC Document}
-}
-@online{moroz,
-  author = {Moroz, Alexander},
-  title = {Some negative refractive index material headlines long before Veselago work and going back as far as to 1905},
-  year = 2009,
-  url = {http://www.wave-scattering.com/negative.html},
-  urldate = {2015-07-30}
 }
 @article{wang2013homogeneous,
   title={Homogeneous anisotropic dielectric invisibility carpet cloak made of Al2O3 plates},
@@ -2905,6 +2884,9 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
   year={1961}
 }
 
+/*}}}*/
+
+% == Other ==
 @inproceedings{wubs2013nonlocal,
   title={Nonlocal modification and quantum optical generalization of effective-medium theory for metamaterials},
   author={Wubs, Martijn and Yan, Wei and Amooghorban, Ehsan and Mortensen, N Asger},
@@ -2924,8 +2906,366 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
   year={2012},
   publisher={Nature Publishing Group}
 }
+@article{smolyaninov2011vacuum,
+  title={Vacuum as a hyperbolic metamaterial},
+  author={Smolyaninov, Igor I},
+  journal={arXiv preprint arXiv:1108.2203},
+  year={2011}
+}
+@article{hill2013uncertainty,
+  title={The uncertainty principle for Fourier transforms on the real line},
+  author={Hill, Mitch},
+  year={2013}
+}
 
 
+
+
+
+
+
+SRR, analytic formulas for resonances, higher-symmetry variants **
+isotropic structures
+"metamaterials should be denoted as mesoscopic systems with considerably more complex homogenization [31, 32]"			***
+"[36*, see Appendix 10], which extended the static homogenization into a fully dynamic homogenization with spatial dispersion effects" ***
+Quasi-Static Magnetic Lenses!!
+"usable perfect lens into the realm of science fiction"
+
+near-field imaging:
+"within the near-field, a magnetic source (...) can be imaged using only negative permeability, while an electric source
+(...) can be imaged using only negative permittivity"
+
+
+
+
+"The metamaterials should thus better be denoted as mesoscopic systems with considerably more complex
+homogenization [31, 32]."
+
+"problems in combination virtually put a usable perfect lens into the realm of science fiction"
+
+
+@article{marques2011bulk,
+  title={Bulk metamaterials made of resonant rings},
+  author={Marques, Ricardo and Jelinek, Lukas and Freire, Manuel J and Baena, Juan Domingo and Lapine, Mikhail},
+  journal={Proceedings of the IEEE},
+  volume={99},
+  number={10},
+  pages={1660--1668},
+  year={2011},
+  publisher={Institute of Electrical and Electronics Engineers}
+}
+Ref. [1]
+
+%In this formalism, even the permittivity of isotropic media has a different effective value for transverse and longitudinal waves \cite{marques2011bulk}. 
+% "when spatial dispersion is present, the magnetic susceptibility becomes a tensor [29], even if the conditions for an isotropic behavior in the long wavelength limit [24] are fulfilled"
+
+
+% TODO \cite{marques2011bulk}low-frequency narrow-band applications - for instance, in magnetic resonance medical imaging (MRI) using swiss rolls seem to be the most promising ones
+
+
+@article{baena2006electrically,
+  title={Electrically small isotropic three-dimensional magnetic resonators for metamaterial design},
+  author={Baena, JD and Jelinek, L and Marques, R and Zehentner, J},
+  journal={Applied Physics Letters},
+  volume={88},
+  number={13},
+  pages={134108},
+  year={2006},
+  publisher={AIP Publishing}
+}
+Ref. [19]
+% TODO \cite{baena2006electrically} topologies with higher symmetry than those of SRR
+% TODO \cite{baena2006electrically} the recently proposed cubic array of modified SRRs and wires 14 provides an isotropic medium... 
+		the proposed structure is difficult to implement in practice. First of all, very high permittivity dielectrics are involved in its design
+		
+% TODO \cite{baena2006electrically} BIISOTROPY magneto- electric couplings may cause the medium to be bi-isotropic, or chiral. 16
+
+% TODO \cite{baena2006electrically} a cubic array of SRRs ... the whole array satisfies inversion symmetry
+	if the couplings among the SRRs are neglected, such basic unit has an isotropic response	
+	couplings between adjacent elements destroy the isotropy when the basic unit do not have the appropriate symmetry
+% TODO \cite{baena2006electrically} This modification substitutes the SRRs by the nonbianisotropic SRRs
+	isotropic behavior
+	the analyzed structure has no inversion symmetry .. may show "bi-isotropy"
+	rotation of the plane of polarization of the transmitted wave is clearly observed
+
+
+
+@article{baena2007towards,
+  title={Towards a systematic design of isotropic bulk magnetic metamaterials using the cubic point groups of symmetry},
+  author={Baena, JD and Jelinek, L and Marqu{\'e}s, R},
+  journal={Physical Review B},
+  volume={76},
+  number={24},
+  pages={245115},
+  year={2007},
+  publisher={APS}
+}
+Ref. [20]
+% TODO \cite{baena2007towards} topologies with higher symmetry than those of SRR
+% TODO \cite{baena2007towards} the cubic arrangement depicted in Fig. 3.1a was proposed. However, this proposal is incorrect [20*
+% TODO \cite{baena2007towards} approximation by an “extended” magnetic dipole was latter shown
+
+         -- COMBININGMM (whether electric and magnetic) subsystems can be combined in order to obtain a new system, whose electromagnetic properties were mainly the superposition of the magnetic and the electric properties of each subsystem, is an interesting and controversial issue
+
+
+% TODO \cite{baena2007towards} 3DSRR lattices of dielectric spheres -- the isotropy is ensured by simply placing them in a cubic lattice
+
+
+
+@article{delgado2009analytical,
+  title={Analytical circuit model for split ring resonators in the far infrared and optical frequency range},
+  author={Delgado, V and Sydoruk, O and Tatartschuk, E and Marqu{\'e}s, R and Freire, MJ and Jelinek, L},
+  journal={Metamaterials},
+  volume={3},
+  number={2},
+  pages={57--62},
+  year={2009},
+  publisher={Elsevier}
+}
+Ref. [22]
+% TODO \cite{delgado2009analytical} shows that the frequency of collision grows dramatically for particle radius below 100 nm
+
+% TODO \cite{delgado2009analytical}The kinetic inductance scales as 1/r, whereas the magnetic inductance scales as r
+
+% TODO \cite{delgado2009analytical}The accuracy of our model in determining the resonant frequency of SRRs is typically around a 10%.
+
+
+
+@article{jelinek2009artificial,
+  title={Artificial magnetism and left-handed media from dielectric rings and rods},
+  author={Jelinek, L and Marqu{\'e}s, R},
+  journal={Journal of Physics: Condensed Matter},
+  volume={22},
+  number={2},
+  pages={025902},
+  year={2009},
+  publisher={IOP Publishing}
+}
+Ref. [24]
+% TODO \cite{jelinek2009artificial} The symmetry pattern depicted in Fig. 3.2 (was used) for a combination of dielectric resonators with a so-called dielectric wire medium [24*
+
+% TODO \cite{jelinek2009artificial} combined ring-wire system ... containing dielectric rings and a dielectric wire medium [24*
+
+% TODO \cite{jelinek2009artificial} uniform dielectric rings (DRs) present unconventional LC
+
+% TODO \cite{jelinek2009artificial} in order to achieve an electrical size a/λ 0 ∼ 0 . 1, the real part of the ring permittivity must be ε ∼ 100 ε 0
+
+
+
+@article{jelinek2008periodic,
+  title={Periodic arrangements of chiral scatterers providing negative refractive index bi-isotropic media},
+  author={Jelinek, L and Marqu{\'e}s, R and Mesa, F and Baena, JD},
+  journal={Physical Review B},
+  volume={77},
+  number={20},
+  pages={205110},
+  year={2008},
+  publisher={APS}
+}
+Ref. [25]
+% TODO \cite{jelinek2008periodic} balanced chiral composite [25* ... example of an important class of isotropic media supporting backward waves, in this case working for circularly polarized waves
+
+BIISOTROPY
+
+
+
+@article{marques2007negative,
+  title={Negative refraction from balanced quasi-planar chiral inclusions},
+  author={Marques, Ricardo and Jelinek, Lukas and Mesa, Francisco},
+  journal={Microwave and Optical Technology Letters},
+  volume={49},
+  number={10},
+  pages={2606--2609},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+Ref. [26]
+
+
+
+@article{jelinek2011fet,
+  title={An FET-based unit cell for an active magnetic metamaterial},
+  author={Jelinek, Lukas and Machac, Jan},
+  journal={arXiv preprint arXiv:1106.4144},
+  year={2011}
+}
+Ref. [29]
+
+     - SRRTYPES
+
+% TODO \cite{jelinek2011fet} LOSSES intrinsic losses of the rings and their loads are responsible for great degradation of lens and cloaking properties in comparison to their lossless theoretical proposals
+"active elements seem to be the only way out of this problem"
+
+% TODO \cite{jelinek2011fet} LORENTZ-DRUDE MEDIUM - different resonance shape due to active components
+
+% TODO \cite{jelinek2011fet} PASSIVITY RULES FOR MMs -- 'negative real part of the impedance can be appreciated in the frequency in- terval 75–150 MHz together with the capacitive imaginary part'
+
+
+
+@article{baena2008unified,
+  title={Unified homogenization theory for magnetoinductive and electromagnetic waves in split-ring metamaterials},
+  author={Baena, JD and Jelinek, L and Marques, R and Silveirinha, M},
+  journal={Physical Review A},
+  volume={78},
+  number={1},
+  pages={013842},
+  year={2008},
+  publisher={APS}
+}
+Ref. [35]
+% TODO \cite{baena2008unified} SPATIAL DISPERSION when the periodicity of a given medium approaches the wavelength of the electromagnetic radiation, it becomes not only time dispersive but also spatially dispersive
+
+% TODO \cite{baena2008unified} SPATIAL DISPERSION slow waves based on short-range interactions between the SRRs: the so-called magnetoinductive 共MI兲 waves, which cannot be deduced from the usually assumed local magnetic permeability of the metamaterial
+
+% TODO \cite{baena2008unified} COMBINING ELMG - the electric and magnetic properties of such combinations are, quite approximately, the superposition of the electric and magnetic properties of each subsystem
+
+HOMOGENISATION - XXX XXX TODO p.87
+
+@article{weber1852relationship,
+  title={On the relationship of the science of the diamagnetism with the sciences of magnetism and electricity},
+  author={Weber, W},
+  journal={Ann. Phys},
+  volume={87},
+  pages={145--189},
+  year={1852}
+}
+@book{schelkunoff1952antennas,
+  title={Antennas: theory and practice},
+  author={Schelkunoff, Sergei Alexander and Friis, Harald T},
+  volume={639},
+  year={1952},
+  publisher={Wiley New York}
+}
+
+
+
+
+@article{silveirinha2009nonlocal,
+  title={Nonlocal homogenization of an array of cubic particles made of resonant rings},
+  author={Silveirinha, MG and Baena, JD and Jelinek, L and Marques, R},
+  journal={Metamaterials},
+  volume={3},
+  number={3},
+  pages={115--128},
+  year={2009},
+  publisher={Elsevier}
+}
+Ref. [36]
+% TODO \cite{silveirinha2009nonlocal} HOMOGENISATION extended the static homogenization into a fully dynamic homogenization with spatial dispersion 
+
+% TODO \cite{silveirinha2009nonlocal} S-PARAMETER - "In most of the studies published in the literature, it
+is typically assumed from the outset that the response
+of the metamaterial is local"
+
+% TODO \cite{silveirinha2009nonlocal} CDH - nonlocal parameters using the homoge- nization method proposed in the works [14,15], which is based on the idea of exciting the metamaterial with a peri- odic source with suitable phase-shift
+
+% TODO \cite{silveirinha2009nonlocal} Following the works [14,15], the unbounded metamaterial can be characterized by a dielectric function of the type ε = ε(ω, k)
+
+% TODO \cite{silveirinha2009nonlocal} SPATIAL DISPERSION "The effects of spatial dispersion in the longitudinal mode can be tamed by decreasing the electrical size of the particles at the resonance, for example by increasing the capacitance of the rings"
+ 
+% TODO \cite{silveirinha2009nonlocal} The response is different if the wire grid is connected or not.
+
+% TODO \cite{silveirinha2009nonlocal} "the effects of spatial dispersion may be relatively weak, especially if k is near the origin of the Brillouin zone"
+
+
+
+
+@article{lapine2012surface,
+  title={Surface mesoscopic effects in finite metamaterials},
+  author={Lapine, Mikhail and Jelinek, Lukas and Marqu{\'e}s, Ricardo},
+  journal={Optics express},
+  volume={20},
+  number={16},
+  pages={18297--18302},
+  year={2012},
+  publisher={Optical Society of America}
+}
+Ref. [43]
+% TODO \cite{lapine2012surface} at the boundaries of the material body a transition layer is formed, with properties different from those of the bulk
+issues with finite metamaterial samples were addressed in [43*
+Two possible geometries of a cube made of resonant rings
+
+% TODO \cite{lapine2012surface} "for most structures with low spatial dispersion a thickness of a few unit cells
+is sufficient to yield the bulk properties"
+
+@article{freire2008experimental,
+  title={Experimental demonstration of a $\mu$=- 1 metamaterial lens for magnetic resonance imaging},
+  author={Freire, Manuel J and Marques, Ricardo and Jelinek, Lukas},
+  journal={Applied Physics Letters},
+  volume={93},
+  number={23},
+  pages={231108},
+  year={2008},
+  publisher={AIP Publishing}
+}
+Ref. [45]
+% TODO \cite{freire2008experimental} lens for magnetic resonance imaging is a slab of isotropic negative permeability μ r = −1 from a two unit cells thick slab of cubic ring resonators 
+performance of this lens has been very good
+
+% TODO \citIMAGING MRI - subwavelength resolution is well known since long in magnetic resonance imaging 
+
+
+@article{jelinek2009accurate,
+  title={Accurate modeling of split ring metamaterial lenses for magnetic resonance imaging applications},
+  author={Jelinek, L and Marques, R and Freire, MJ},
+  journal={Journal of Applied Physics},
+  volume={105},
+  number={2},
+  pages={024907},
+  year={2009},
+  publisher={AIP Publishing}
+}
+Ref. [46]
+% TODO \cite{jelinek2009accurate} a proper homogenization scheme taking into account its small thickness has been developed [46*
+
+% TODO \cite{jelinek2009accurate} elaborate analytic model
+
+
+
+@article{freire2010applications,
+  title={On the applications of $\mu$r=-1 metamaterial lenses for magnetic resonance imaging},
+  author={Freire, Manuel J and Jelinek, Lukas and Marques, Ricardo and Lapine, Mikhail},
+  journal={Journal of Magnetic Resonance},
+  volume={203},
+  number={1},
+  pages={81--90},
+  year={2010},
+  publisher={Elsevier}
+}
+Ref. [47]
+% TODO \cite{freire2010applicationst} he lens has been tested in various scenarios [47*
+% TODO \cite{freire2010applicationst} Usage of the lens in connection with the parallel imaging technique [47*
+
+
+
+
+@article{lapine2010exact,
+  title={Exact modelling method for discrete finite metamaterial lens},
+  author={Lapine, M and Jelinek, Lukas and Marqu{\'e}s, R and Freire, MJ},
+  journal={Microwaves, Antennas \& Propagation, IET},
+  volume={4},
+  number={8},
+  pages={1132--1139},
+  year={2010},
+  publisher={IET}
+}
+Ref. [48]
+detailed discrete model [48*
+
+
+
+
+@article{lapine2010realistic,
+  title={Realistic metamaterial lenses: Limitations imposed by discrete structure},
+  author={Lapine, M and Jelinek, L and Freire, MJ and Marqu{\'e}s, R},
+  journal={Physical Review B},
+  volume={82},
+  number={16},
+  pages={165124},
+  year={2010},
+  publisher={APS}
+}
+Ref. [49]
 
 
 
