--- a/t.tex
+++ b/t.tex
@@ -12,11 +12,11 @@
 \usepackage{upgreek}
 
 \usepackage[
-  language=english,  % Ustawienie języka
-  %urldate=long,     % Wyświetlenie długiego formatu w datach
-  style=numeric,    % numeric, alphabetic, authoryear,
-  sorting=none,      % Sortowanie: nAME, tITLE, yEAR
-  isbn=true,        % zgodnie z nowym rozporządzeniem  pole obowiązkowe
+  language=english,
+  %urldate=long,
+  style=numeric,
+  sorting=none,
+  isbn=true,
   doi=false,
   url=true,
   firstinits=true,  % will render all first and middle names as initials.
@@ -96,8 +96,8 @@
 
 %\ExecuteBibliographyOptions{maxbibnames=16}
 
-\chapter*{List of own publications}
-\input{fd_publications.tex} % TODO
+%\chapter*{List of own publications}
+%\input{fd_publications.tex} 
 
 \label{enddocument} 
 \end{document}
