--- a/theory.tex
+++ b/theory.tex
@@ -154,7 +154,7 @@ Causality prevents any medium from reacting to the future electric (or magnetic)
 Thus, the basic physical laws impose relatively strict constraints on the time-domain response function $f(t)$, which translate into other constraints for the possible shape of the response in frequency domain $F(\omega)$. The intuitive physical derivation is based on the fact that any time-domain response function can be trivially separated into its odd and even parts, as shown in Fig. \ref{fg_kk}. 
 \begin{equation}f(t) = f_{odd}(t) + f_{even}(t) = -f_{odd}(-t) + f_{even}(-t) \label{eq_odd_even_decomp}\end{equation}
 \begin{figure}[t] \caption{Illustration of how a real causal function $f(t)$ can be decomposed into the odd and even parts, which then yield pure imaginary and pure real functions in the spectrum, respectively. Mathematically this is expressed in Eqs. (\ref{eq_odd_even_decomp}--\ref{eq_kkresult}).} \label{fg_kk} \centering 
-	\includegraphics[width=17.5cm]{img/Kramers_Kronig_plot/kk.pdf}
+	\includegraphics[width=\textwidth]{img/Kramers_Kronig_plot/kk.pdf}
 \end{figure}
 The Fourier transform of a real odd function is an imaginary function:
 %F_{odd}(\omega)=& \int_{-\infty}^{\infty} e^{-\ii \omega t} f(t) \mbox{d}t = \\
@@ -322,7 +322,7 @@ Each photonic branch also has to be plotted in a separate plot to prevent the co
 Moreover, in every single photonic band, Eq. (\ref{eq_dispdet}) yields two solutions for two possible polarisations of transverse waves \cite[p. 46]{klingshirn2007semiconductor}. The IFCs for these solutions are in general different in anisotropic media, but we always restrict the discussion only to one polarisation in the following figures for simplicity. 
 % discuss this further? In uniaxial media, where two diagonal components ...
 
-\begin{figure}[ht] \caption{Isofrequency contours for three different frequencies: \textbf{(a)} IFCs in the isotropic medium are circular and centered in the $k=0$ point. \textbf{(b)} An anisotropic medium with the optical axis perpendicular to the interface, where IFCs take the form of ellipses. \textbf{(c)} A similar case of another anisotropic medium, with the orientation of the optical axis (drawn as the dashed black line) that warrants introducing the index of refraction for the shown direction of the wave vector $\kk$. Note that for clarity, the plots (b) and (c) show the IFCs only for one wave polarisation. %%% XXX XXX XXX todo what is the orientation of the group velocity??
+\begin{figure}[ht] \caption{Isofrequency contours for three different frequencies: \textbf{(a)} IFCs in the isotropic medium are circular and centered in the $k=0$ point. \textbf{(b)} An anisotropic medium with the optical axis perpendicular to the interface, where IFCs take the form of ellipses. \textbf{(c)} A similar case of another anisotropic medium, with the orientation of the optical axis (drawn as the dashed black line) that warrants introducing the index of refraction for the shown direction of the wave vector $\kk$. Note that for clarity, the plots (b) and (c) show the IFCs only for one wave polarisation. %%% todo what is the orientation of the group velocity??
 %% FIXME \textbf{(d)} A dispersive \textit{hyperbolic medium}\index{hyperbolic medium}, with one component being a function of frequency and crossing zero.
 } \label{fg_ifc} \centering
 	\includegraphics[width=.8\textwidth]{img/ifc_freqdispersion.pdf} 
@@ -543,7 +543,6 @@ where we make use of the wavefront projection tensor defined as
 %}}}
 \paragraph{Other formulations}%{{{
 Let us note that the classical approach using symmetric parameters $\epsrl(\omega,\kk),\murl(\omega,\kk)$, and the Landau-Lifshitz approach of gathering all medium-related effects in the permittivity $\epsLL(\omega,\kk)$ are only two examples of all possible gauge transformations of medium parameters under which the Maxwell equations are invariant. 
-
 Formally, one can distribute the medium electric and magnetic responses between these parameters arbitrarily -- the distribution weight may be even frequency dependent, leading to a physically realistic pair of parameters with custom spectral shape \cite{skaar2014diamagnetism}.
 %}}}
 
@@ -658,7 +657,7 @@ In the simplest case where the wave perpendicularly impinges a single interface 
 
 %}}}
 \paragraph{Refraction on an interface with a nonlocal medium}   %{{{
-The task to compute the amplitudes of reflectance and transmittance for nonlocal media is substantially more complicated than for the local media. The principial reason is related to the fact that the definition of the medium response (\ref{eq_chi_convol_nonloc}) contains a convolution over an infinite space, which naturally does not account for the interface. For the problem to be better formulated, the integral would have to be modified, either with the nonlocal response of medium to extend also behind the interface, or with the medium response sharply truncated at the interface. For a weak spatial dispersion, different approaches to the problem are discussed in \cite{golubkov1995boundary}.
+The task to compute the amplitudes of reflectance and transmittance for nonlocal media is substantially more complicated than for the local media. The principal reason is related to the fact that the definition of the medium response (\ref{eq_chi_convol_nonloc}) contains a convolution over an infinite space, which naturally does not account for the interface. For the problem to be better formulated, the integral would have to be modified, either with the nonlocal response of medium to extend also behind the interface, or with the medium response sharply truncated at the interface. For a weak spatial dispersion, different approaches to the problem are discussed in \cite{golubkov1995boundary}; a similar problem for one example of periodic structures is numerically analyzed in \cite{lapine2012surface}.
 
 Strong enough spatial dispersion can also allow the plane wave to refract into a superposition of two independent plane waves, which differ by their component of the wavevector perpendicular to the interface. The respective amplitudes of these components depend on the \textit{additional boundary conditions}\index{additional boundary conditions}\index{additional boundary conditions} \cite{agranovich2006spatial}.
 
@@ -739,7 +738,7 @@ where $m_1, m_2, m_3 \in \mathbb{Z}$ and $\ava, \avb, \avc$ are three linearly i
 The points generated by all combinations of possible translations of the unit cell center by $m_1 \ava + m_2 \avb + m_3 \avc$ form a periodic lattice.
 The volume defined as a \textit{set of points closest to} one given point of the lattice will be denoted as a \textit{unit cell}\index{unit cell} (similar to the \textit{Wigner-Seitz cell}\index{Wigner-Seitz cell} in solid-state physics). Obviously, the permittivity or permeability in periodic structures needs only to be specified within one unit cell.
 
-The choice of lattice vectors $\avabc$ limits the set of the rotation or mirror symmetries of the structure. Based on the allowed symmetries, all lattices in three dimensions can be classified into six \textit{crystal systems}\index{crystal systems}, namely \textit{cubic}, \textit{tetragonal}, \textit{ortorhombic}, \textit{monoclinic}, \textit{hexagonal-trigonal}, all periodic structures can be classified into 230 \textit{crystallographic space groups}. Numerous crystal optics textbooks (e.g. \cite[p. 678]{born1999book}) give more rigorous definitions. 
+The choice of lattice vectors $\avabc$ limits the set of the rotation or mirror symmetries of the structure. Based on the allowed symmetries, all lattices in three dimensions can be classified into six \textit{crystallographic systems}\index{crystallographic systems}, namely \textit{cubic}, \textit{tetragonal}, \textit{ortorhombic}, \textit{monoclinic}, \textit{hexagonal-trigonal}, all periodic structures can be classified into 230 \textit{crystallographic space groups}. Numerous crystal optics textbooks (e.g. \cite[p. 678]{born1999book}) give more rigorous definitions. 
 
 Unless stated otherwise, we will assume that the cubic lattice is used, which allows the highest possible symmetry. In the cubic lattice, the lattice vectors $\avabc$ are of the same magnitude $a$ and mutually orthogonal. % Note, however, that even the structure with a periodic modulation of permittivity is no more isotropic, i.e. posessing continuous rotational symmetry.
 
@@ -910,7 +909,7 @@ In vacuum, this process repeats with higher orders of the mode function: $\mathb
 
 We will show in the Results section on a particular example that some numerical approaches provide nontrivial rules to prefer one particular dispersion curve in the unfolded plot. The Results section also contains a physical interpretation of this finding.
 
-%When the wavelength is less than double cell spacing, or equivalently when $2\pi c /K < 2 a$, the unit cells can scatter the forward propagating wave into the backward direction and vice versa. In an infinite periodic structure the energy transfer must be conserved, so the forward and backward waves must be of the same amplitude. (The equilibrium of forward and backward wave amplitudes may, however, differ in some cases even in in infinite periodic structure. One example is when the constituent materials lose time-reversal symmetry due to static magnetic field.) We assume this also in this example with virtual periodicity. The \textit{Bloch's wave}\index{Bloch's wave} is a product of two functions, and it gives one degree of freedom to select which part of (\ref{eq_bloch}) expresses the phase shift across one unit cell. Two different conventions are used in the literature.
+%When the wavelength is less than double cell spacing, or equivalently when $2\pi c /K < 2 a$, the unit cells can scatter the forward propagating wave into the backward direction and vice versa. In an infinite periodic structure the energy transfer must be conserved, so the forward and backward waves must be of the same amplitude. (The equilibrium of forward and backward wave amplitudes may, however, differ in some cases even in infinite periodic structure. One example is when the constituent materials lose time-reversal symmetry due to static magnetic field.) We assume this also in this example with virtual periodicity. The \textit{Bloch's wave}\index{Bloch's wave} is a product of two functions, and it gives one degree of freedom to select which part of (\ref{eq_bloch}) expresses the phase shift across one unit cell. Two different conventions are used in the literature.
 % \begin{enumerate}
 %  \item{In the \textit{unfolded}\index{unfolded} plot, the phase shift is expressed entirely by the envelope $\mathrm{e}^{\mathrm{i}Kz}$. One can always find a line coming from the front side of a unit cell to its back side, along which the mode function does not change its phase significantly $\mathbf{u(\mathbf{r})}$. In other words, the volume of the unit cell is not divided by any \textit{nodal plane}\index{nodal plane} in the real part of electric field  $\mathbf{u(\mathbf{r})}$. (However, closed nodal planes within the unit cell may appear due to individual resonances.)
 % 
@@ -1201,9 +1200,10 @@ The carpet cloak may be built with $N<1$ media as in full-angle cloaks, however 
 \paragraph{Analysis of nonresonant sub-wavelength structures} %{{{ ================== 3x cite
 The third independent paradigm was based on arranging sub-wavelength particles into an optically dense lattice to obtain some desired macroscopic behaviour of the light. 
 
-Its original source of inspiration can be traced to the late 19th century, when the scientific community resolved the question of how the polarizability of individual atoms in matter affects the macroscopic permittivity. Except for gases, the inter-atomic interactions are not negligible and the answer formulated by the Lorentz-Lorenz, or, Clausius-Mossoti formula. Thanks to the atomic size being negligible compared to the optical wavelengths, all optically transparent natural media have been successfully approximated as homogeneous. 
+Its original source of inspiration can be traced to the late 19th century, when the scientific community resolved the question of how the dipoles of individual atoms in matter affects the macroscopic permittivity and permeability. 
+The atomic size is negligible compared to the optical wavelengths, so all optically transparent natural media can be easily approximated as homogeneous. The explanation of the diamagnetic behaviour of some materials was proposed in the form of  each atom behaving as a microscopic conductive loop in 1853 \cite{weber1852relationship}. However, the inter-atomic electric dipole interactions are not negligible, and except for gases they preclude simple dipole averaging, so the explanation of the permittivity was formulated two decades later using the Lorentz-Lorenz (or, Clausius-Mossoti) formula.
 
-Theories of dielectric behaviour of nonhomogeneous composites have been developed throughout the 20th century, among which the Maxwell-Garnett (1904) and Bruggemann (1935) are most known among multiple approaches. 
+Theories of dielectric behaviour of composites having inhomogenities larger than the atomic scale have been developed throughout the 20th century, among which the Maxwell-Garnett (1904) and Bruggemann (1935) are most known among multiple approaches. 
 Their common assumption is that the wavelength is much larger than the particles; furthermore, they suppose there are no internal resonances in the embedded particles. More elaborate theories are needed when the particle have unusual shapes, particularly near the so-called percolation threshold when they become connected.
 %% "process of replacing a complex structure of subwavelength sized components with an “effective medium” with uni-
 %% form properties. It is a fundamentally important notion which can be traced back to the earliest days of electro-
@@ -1235,9 +1235,9 @@ In all cases of $\eeff(\omega)<1$, the effective refractive index $\Neff(\omega)
 
 %}}}
 \paragraph{Negative effective permeability and negative refractive index}  %{{{ ================== 
-The literature is somewhat ambiguous, but a thorough search shows that the term \textit{metamaterial}\index{metamaterial!history} (MM) was first used by Walser in 1999. Although apparently redundant to \textit{artificial dielectrics}, which was used for decades before,  the new term of \textit{metamaterial} can be viewed as more fortunate as it does not imply whether the structure is man made or not, nor whether its effective parameters mimic a dielectric or, e.g., a metal.
+The literature is somewhat ambiguous, but a thorough search shows that the term \textit{metamaterial}\index{metamaterial!history} (MM) was first used on conference by Walser in 1999. Although apparently redundant to \textit{artificial dielectrics}, which was used for decades before\footnote{An interesting search into the terminology usage by means of the \textit{Google Books Ngram Viewer} shows that the notion of  \textit{artificial dielectrics} has been the most used in the 1950 and early 1960, and then it levelled off at a low frequency, which was greatly exceeded by the usage of \textit{metamaterial} in early 2000s. Simultaneously, the usage of \textit{photonic crystal} has rose an order of magnitude higher.},  the new term of \textit{metamaterial} can be viewed as more fortunate as it does not imply whether the structure is man made or not, nor whether its effective parameters mimic a dielectric or, e.g., a metal.
 
-It remains unclear whether there was an objective cause, or a semantic bias from the term \textit{artificial dielectrics} only, that the periodic structures with magnetic effects received less attention than those with electric ones. Apparently the first theoretical study thereof  by Lewin \cite{lewin1947electrical} dates back to 1947, but the first realisations of split-ring resonator arrays and other magnetically resonant structures seem to have been published no earlier than in 1980s. Further details can be found in the Results chapter on pp. \pageref{negn_srr} and \pageref{negn_diel}.
+It remains unclear whether there was an objective cause, or a semantic bias from the term \textit{artificial dielectrics} only, that the periodic structures with magnetic effects received less attention than those with electric ones. Apparently the first theoretical studies thereof by Lewin \cite{lewin1947electrical} and Schelkunoff \cite{schelkunoff1952antennas} date back to 1940s, but the first realisations of split-ring resonator arrays and other magnetically resonant structures seem to have been published no earlier than in 1980s. Further details can be found in the Results chapter on pp. \pageref{negn_srr} and \pageref{negn_diel}.
 
 % TODO add about history from SRRs and diel-spheres
 The research of artificial dielectrics, or newly, metamaterials, gained on significant popularity after the papers from 1999 by Pendry \cite{pendry1999magnetism} and from 2000 by Smith \cite{smith2000composite}. The former outlined how a negative index of refraction can be obtained in a structure composed of metallic wires introducing $\eeff<0$ and of small metallic loops, known as \textit{split-ring resonators}\index{split-ring resonator!history} (SRR), introducing $\meff<0$. The latter paper described the experimental verification of negative refraction in the microwave range. Thousands of papers followed suite which covered different spectral ranges, demonstrated other MM designs, discussed theoretically when and how the metamaterial can be viewed as homogeneous, and sought for new applications. 
